--- a/index.html
+++ b/index.html
@@ -4,59 +4,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Идея проекта</title>
-    <style>
-body {
-
-color:white;
-background-color:black;
-font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-h1 {
-color: rgb(190, 16, 74);
-}
-dt {
-font-weight: bold;
-color: rgb(112, 106, 106);
-}
-#div1 {background-color:rgb(50, 47, 51)
-}
-#h1B {color:hotpink;}
-
-    </style>
+    <title>VoS|LirKov|MeyDi Artistic collaboration</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <h1>Идея проекта</h1>
-    <p>Лира, комиксист-иллюстратор</p>
-    <h2>Стратегия</h2>
-    <dl>
-     <dt>Резюме проекта</dt>
-     <dd>Сайт-визитка, на котором размещены следующие данные:
-         <ul><li>Псевдоним иллюстратора;</li>
-             <li>Опыт работы;</li>
-             <li>Примеры работы;</li>
-             <li>Список выставок и достижений;</li>
-             <li>Активные площадки.</li>
-        </ul>
-        </dd>   
-     <dt>Целевая аудитория</dt>
-     <dd>Молодежь и люди средних лет, любители цифровой графики и комиксов.</dd>
-     <dt>Принципы подачи информации</dt>
-     <dd>Визуальные образы, анимация, минимизация объемов текстовой информации, оригинальный дизайн.</dd>
-     <dt>Продвижение и маркетинг</dt>
-     <dd>Размещение рекламы на тематических площадках.</dd>
-    </dl>   
-    <div id="div1"><h2 id="h1B">Концепция</h2>  
-    <dl>
-    <dt>Графика</dt>    
-    <dd>Яркие, позитивные и дерзкие образы маскотов.</dd>
-    <dt>Колористика</dt>    
-    <dd>Контрастная палитра, органично сочетающаяся с стилевыми характеристиками работ иллюстратора.</dd>
-    <dt>Типографика</dt>    
-    <dd>Рубленые, хорошо читаемые шрифты; минимум текста.</dd>
-    <dt>Анимация</dt>    
-    <dd>Плавная и ненавязчивая, интерактивная по отношению к поведению читателя на странице.</dd>
-    </dl></div>
-
+    <header>
+        <a href = "lirkovbio.html" class = "header-author" id = "header-lir" target="window"></a>
+        <a href = "meydibio.html" class = "header-author" id = "header-mey" target="window"></a>
+        <a href = "vosbio.html" class = "header-author" id = "header-vos" target="window"></a>
+    </header>
+<div class="containermenu">
+<ul class="mainul mainmain">
+    
+<li><a href="#" class="undermen">About Us</a>
+    <ul>
+        <li><a href="#">Mey</a></li>
+        <li><a href="#">Lir</a></li>
+        <li><a href="#">Alise</a></li>
+    </ul>
+</li>
+<li><a href="#" class="undermen">Lala</a>
+    <ul>
+        <li><a href="#">Mey</a></li>
+        <li><a href="#">Lir</a></li>
+        <li><a href="#">Alise</a></li>
+    </ul>
+</li>
+<li><a href="#" class="undermen">Blabla</a>
+    <ul>
+        <li><a href="#">Mey</a></li>
+        <li><a href="#">Lir</a></li>
+        <li><a href="#">Alise</a></li>
+    </ul>
+</li>
+<li><a href="#" class="undermen">Kejej</a>
+    <ul>
+        <li><a href="#">Mey</a></li>
+        <li><a href="#">Lir</a></li>
+        <li><a href="#">Alise</a></li>
+    </ul>
+</li>
+<li><a href="#" class="undermen">Kejej</a>
+    <ul>
+        <li><a href="#">Mey</a></li>
+        <li><a href="#">Lir</a></li>
+        <li><a href="#">Alise</a></li>
+    </ul>
+</li>
+</ul>
+</div>
+    
+<iframe src="insidestart.html" name="window"></iframe>
 </body>
 </html>
