--- a/index.html
+++ b/index.html
@@ -9,51 +9,56 @@
 </head>
 <body>
     <header>
-        <a href = "lirkovbio.html" class = "header-author" id = "header-lir" target="window"></a>
-        <a href = "meydibio.html" class = "header-author" id = "header-mey" target="window"></a>
-        <a href = "vosbio.html" class = "header-author" id = "header-vos" target="window"></a>
+        <a href = "aboutus/lirkovbio.html" class = "header-author" id = "header-lir" target="window"></a>
+        <a href = "aboutus/meydibio.html" class = "header-author" id = "header-mey" target="window"></a>
+        <a href = "aboutus/vosbio.html" class = "header-author" id = "header-vos" target="window"></a>
     </header>
 <div class="containermenu">
 <ul class="mainul mainmain">
     
-<li><a href="#" class="undermen">About Us</a>
+<li><a href="#">About Us</a>
     <ul>
-        <li><a href="#">Mey</a></li>
-        <li><a href="#">Lir</a></li>
-        <li><a href="#">Alise</a></li>
+        <li><a href="aboutus/meydibio.html" target="window">MeyDi</a></li>
+        <li><a href="aboutus/lirkovbio.html" target="window">LirKov</a></li>
+        <li><a href="aboutus/vosbio.html" target="window">VoS</a></li>
     </ul>
 </li>
-<li><a href="#" class="undermen">Lala</a>
+<li><a href="#" class="undermen">Gallery</a>
     <ul>
-        <li><a href="#">Mey</a></li>
-        <li><a href="#">Lir</a></li>
-        <li><a href="#">Alise</a></li>
+        <li><a href="gallery/digital.html" target="_blank">Digital art</a></li>
+        <li><a href="trad.html" target="_blank">Traditional</a></li>
+        <li><a href="collabs.html" target="_blank">Collaborations</a></li>
+        <li><a href="decorart.html" target="_blank">Decorative art</a></li>
+        <li><a href="animation.html" target="_blank">Animation</a></li>
+        <li><a href="mmedia.html" target="_blank">Mixed media</a></li>
+        <li><a href="photo.html" target="_blank">Photo</a></li>
+        <li><a href="comics.html" target="_blank">Comics</a></li>
     </ul>
 </li>
-<li><a href="#" class="undermen">Blabla</a>
+<li><a href="#" class="undermen">Status</a>
     <ul>
-        <li><a href="#">Mey</a></li>
-        <li><a href="#">Lir</a></li>
-        <li><a href="#">Alise</a></li>
+        <li><a href="plans.html" target="window">Planned</a></li>
+        <li><a href="process.html" target="window">In process</a></li>
+        <li><a href="holid.html" target="window">Holydays</a></li>
     </ul>
 </li>
-<li><a href="#" class="undermen">Kejej</a>
+<li><a href="#" class="undermen">Order</a>
     <ul>
-        <li><a href="#">Mey</a></li>
-        <li><a href="#">Lir</a></li>
-        <li><a href="#">Alise</a></li>
+        <li><a href="tos.html" target="window">ToS</a></li>
+        <li><a href="price.html" target="window">Price</a></li>
     </ul>
 </li>
-<li><a href="#" class="undermen">Kejej</a>
+<li><a href="#" class="undermen">Web</a>
     <ul>
-        <li><a href="#">Mey</a></li>
-        <li><a href="#">Lir</a></li>
-        <li><a href="#">Alise</a></li>
+        <li><a href="web/socialmedia.html" target="window">Social media</a></li>
+        <li><a href="web/fb.html" target="window">Feedback</a></li>
+        <li><a href="web/money.html" target="window">Donate</a></li>
     </ul>
 </li>
 </ul>
 </div>
     
-<iframe src="insidestart.html" name="window"></iframe>
+<iframe src="insidestart.html" name="window" class="onceframe"></iframe>
+
 </body>
 </html>
