--- a/status/plans.html
+++ b/status/plans.html
@@ -8,10 +8,6 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body class="inside">
- Welcome to the artist collaboration page!
- That's page of three artists, named LirKov, MeyDi and VoS
- Info about our sources of imagination you can fond into 'About us'
- 'Gallery' contained our art.
- Into 'Status' our process of work, plans and 
+Projects in queue
 </body>
 </html>
