--- a/web/fb.html
+++ b/web/fb.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body class="inside">
-  Биография Юли
+Feedback page
 </body>
 </html>
