--- a/aboutus/lirkovbio.html
+++ b/aboutus/lirkovbio.html
@@ -8,6 +8,22 @@
     <link rel="stylesheet" href="../style/style.css">
 </head>
 <body class="inside">
-  Биография Юли
+<img class="leftimg round" src="lirkovbi.png" width="200px" style="margin-right: 15px;">
+ <h2>Bio</h2>
+ <br>Hello! I am an anthro artist <b class="textaccent">LirKov</b>, but you can call me Lira. My real name - Kazyurina Julia.
+ <br>I was born <b class="textaccent">12 feb 1994</b>, in small and calm sity Armavir. 
+ <br>My childhood was spent in travels, so, I think. that's why I adapt easy to any conditions.
+ <br>When I went on the school, we moves on Rostov-on-Don.
+ <br>There I recieved some educations - of <b class="textaccent">juvelir</b>, <b class="textaccent">manager</b> and <b class="textaccent">designer</b>.
+ <br>Beside this, I also have some hobbies like photography, weaving from beads and creating videguides for games.
+ <br>Hope, I satisfy you curiosity. Good luck!
+ <br>
+ <h2>Awards</h2>
+ <img  src="awards/lirkov/sia.PNG" width="150px"> 
+  <img  src="awards/lirkov/vesna.jpg" width="150px"> 
+  <img  src="awards/lirkov/2021pla.jpg" width="150px"> 
+  <img  src="awards/lirkov/2020pla.jpg" width="150px"> 
+  <img  src="awards/lirkov/zur.PNG" width="150px"> 
+
 </body>
 </html>
