--- a/aboutus/vosbio.html
+++ b/aboutus/vosbio.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="../style/style.css">
 </head>
 <body class="inside">
-Биография Алисы
+
+    <h2>Bio</h2> 
+    In developing
+    <h2>Awards</h2>
+    In developing
 </body>
 </html>
