--- a/index.html
+++ b/index.html
@@ -25,33 +25,33 @@
 </li>
 <li><a href="#" class="undermen">Gallery</a>
     <ul>
-        <li><a href="gallery/digital.html" target="_blank">Digital art</a></li>
-        <li><a href="trad.html" target="_blank">Traditional</a></li>
-        <li><a href="collabs.html" target="_blank">Collaborations</a></li>
-        <li><a href="decorart.html" target="_blank">Decorative art</a></li>
-        <li><a href="animation.html" target="_blank">Animation</a></li>
-        <li><a href="mmedia.html" target="_blank">Mixed media</a></li>
-        <li><a href="photo.html" target="_blank">Photo</a></li>
-        <li><a href="comics.html" target="_blank">Comics</a></li>
+        <li><a href="gallery/digital.html" target="window">Digital art</a></li>
+        <li><a href="gallery/trad.html" target="window">Traditional</a></li>
+        <li><a href="gallery/collabs.html" target="window">Collaborations</a></li>
+        <li><a href="gallery/decor.html" target="window">Decorative art</a></li>
+        <li><a href="gallery/animation.html" target="window">Animation</a></li>
+        <li><a href="gallery/mmedia.html" target="window">Mixed media</a></li>
+        <li><a href="gallery/photo.html" target="window">Photo</a></li>
+        <li><a href="gallery/comics.html" target="window">Comics</a></li>
     </ul>
 </li>
 <li><a href="#" class="undermen">Status</a>
     <ul>
-        <li><a href="plans.html" target="window">Planned</a></li>
-        <li><a href="process.html" target="window">In process</a></li>
-        <li><a href="holid.html" target="window">Holydays</a></li>
+        <li><a href="status/plans.html" target="window">Planned</a></li>
+        <li><a href="status/process.html" target="window">In process</a></li>
+        <li><a href="status/holid.html" target="window">Holydays</a></li>
     </ul>
 </li>
 <li><a href="#" class="undermen">Order</a>
     <ul>
-        <li><a href="tos.html" target="window">ToS</a></li>
-        <li><a href="price.html" target="window">Price</a></li>
+        <li><a href="order/tos.html" target="window">ToS</a></li>
+        <li><a href="order/price.html" target="window">Price and order</a></li>
     </ul>
 </li>
 <li><a href="#" class="undermen">Web</a>
     <ul>
         <li><a href="web/socialmedia.html" target="window">Social media</a></li>
-        <li><a href="web/fb.html" target="window">Feedback</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc0q3XgEGAguRoVDaXktHfrgAvpiqba6jiydhUozkmbLPCkiw/viewform?embedded=true" target="window">Feedback</a></li>
         <li><a href="web/money.html" target="window">Donate</a></li>
     </ul>
 </li>
@@ -60,5 +60,7 @@
     
 <iframe src="insidestart.html" name="window" class="onceframe"></iframe>
 
+
+<div class="indexbuttondiv"><a href="insidestart.html" class="indexbutton" target="window">Main <br>page</a></div>
 </body>
 </html>
