--- a/order/price.html
+++ b/order/price.html
@@ -5,9 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 <body class="inside">
-Price
+<h1>Price and order</h1>
+<h2>Lirkov</h2>
+<div class="textaccent">To calculate the price fill the form</div>
+Form contens next points:
+<br>
+<a href="gogform" class="linkinside">>>> Calculate and order <<<</a>
+<ol>
+<li>Digital art</li>
+<li>Traditional art</li>
+</ol>
+
+Type
+<ol>
+<li>Drawing</li>
+<li>Comics</li>
+<li>Stickers</li>
+<li>Poster</li>
+<li>Reference</li>
+<li>Design of app or site</li>
+</ol>
+
+Parameters
+<ol>
+<li>Detailed background</li>
+<li>Simple background</li>
+<li>Has no background</li>
+<li>Colorful</li>
+<li>B\w</li>
+<li>Lineart only</li>
+<li>Sketch</li>
+</ol>
+
+
+<h2>MeyDi</h2>
+<h2>VoS</h2>
+
 </body>
 </html>
