--- a/order/tos.html
+++ b/order/tos.html
@@ -5,9 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 <body class="inside">
-Terms of service
+<h1>Terms of service</h1>
+<h2>Shape of order</h2>
+<div class="divtextinside">
+Some rules should  be here but they don't</div>
+<h2>Art themes</h2>
+<div class="divtextinside">
+    Some rules should  be here but they don't</div>
+<h2>Price politics</h2>
+<div class="divtextinside">
+    Some rules should  be here but they don't</div>
+<h2>Delivery</h2>
+<div class="divtextinside">
+    Some rules should  be here but they don't</div>
+<h2>Authoric rights</h2>
+<div class="divtextinside">
+    Some rules should  be here but they don't</div>
+<h2>Property rights and permissions</h2>
+<div class="divtextinside">
+    Some rules should  be here but they don't</div>
 </body>
 </html>
