--- a/status/holid.html
+++ b/status/holid.html
@@ -5,9 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 <body class="inside">
-Holidays and pauses
+
+    <h1>
+    Holydays and weekends
+    </h1>
+    <h2>New year holydays</h2>
+    <div class="divtextinside">
+We are don't working on the new year holidays. Also we don't take order at that time</div>
+        <h2>Weekends</h2>
+        <div class="divtextinside">
+            Into weekdays we're working without weekends, from monday to sunday.
+        </div>
 </body>
 </html>
