--- a/status/plans.html
+++ b/status/plans.html
@@ -5,9 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 <body class="inside">
-Projects in queue
+<h1>Plans</h1>
+<h2>LirKov</h2>
+<div class="divtextinside">
+<ul class="insideul">
+<li>"Hand made" comics [150~ pages]</li>
+<li>"Morenedy necessary" comics [100~ pages]</li>
+<li>"Runner" comucs [30~ pages]</li>
+<li>"Disciple" comics [30~ pages]</li>
+<li>Marker poster, tiger on flower field, A3</li>
+<li>Watercoloring fullcolored lioness, A2 art</li>
+
+</ul>
+</div>
+<h2>MeyDi</h2>
+<div class="divtextinside">
+In developing</div>
+
+
+<h2>Vos</h2>
+<div class="divtextinside">
+In developing</div>
 </body>
 </html>
