--- a/web/fb.html
+++ b/web/fb.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 <body class="inside">
-Feedback page
+<h1>Feedback form</h1>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc0q3XgEGAguRoVDaXktHfrgAvpiqba6jiydhUozkmbLPCkiw/viewform?embedded=true" width="640" height="700" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
 </body>
 </html>
