--- a/web/money.html
+++ b/web/money.html
@@ -5,9 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 <body class="inside">
-How to donate
+<h1>How to donate</h1>
+<h2>LirKov</h2>
+<div class="gallery">
+<a href=""><img src="boos.png" height="100px" class="round"></a>
+<a href=""><img src="by me a coffee.png" height="100px" class="round"></a>
+</div>
+<h2>MeyDi</h2>
+<div class="gallery">
+<a href=""><img src="boos.png" height="100px" class="round"></a>
+<a href=""><img src="by me a coffee.png" height="100px" class="round"></a>
+</div>
+<h2>VoS</h2>
+<div class="gallery">
+<a href=""><img src="boos.png" height="100px" class="round"></a>
+<a href=""><img src="by me a coffee.png" height="100px" class="round"></a>
+</div>
 </body>
 </html>
