--- a/status/process.html
+++ b/status/process.html
@@ -5,9 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 <body class="inside">
-Works in progress
+<h1>Works in progress</h1>
+<h2>LirKov</h2>
+<ul>
+    <li>Sheep's eyes page 14 [lineart]</li>
+    <li>Once at the forest page 9 [sketch]</li>
+    <li>Vaelik commision [flat color]</li>
+</ul>
+<h2>MeyDi</h2>
+
+<h2>VoS</h2>
+
 </body>
 </html>
