--- a/gallery/digital.html
+++ b/gallery/digital.html
@@ -11,11 +11,10 @@
     <h1>Digital art</h1>
     <h2>MeyDi</h2>
     <div class="gallery">
-        In developing
-
-
-
-        
+        <a href="../pics/digitalart/meydi/digital1.jpg" target="blank"><img src="../pics/digitalart/meydi/preview/digital1.jpg" alt="" class="round"></a>
+        <a href="../pics/digitalart/meydi/digital2.jpg" target="blank"><img src="../pics/digitalart/meydi/preview/digital2.jpg" alt="" class="round"></a>
+        <a href="../pics/digitalart/meydi/digital3.jpg" target="blank"><img src="../pics/digitalart/meydi/preview/digital3.jpg" alt="" class="round"></a>
+        <a href="../pics/digitalart/meydi/digital4.jpg" target="blank"><img src="../pics/digitalart/meydi/preview/digital4.jpg" alt="" class="round"></a>
     </div>    
     <h2>VoS</h2>
     <div class="gallery">
