--- a/gallery/mmedia.html
+++ b/gallery/mmedia.html
@@ -11,7 +11,9 @@
     <h1>Mixed media</h1>
     <h2>MeyDi</h2>
     <div class="gallery">
-        In developing
+        <div class="gallery">
+            <a href="../pics/mmedia/meydi/mmart1.jpg" target="blank"><img src="../pics/mmedia/meydi/preview/mmart1.jpg" alt="" class="round"></a>
+        <a href="../pics/mmedia/meydi/mmart2.jpg" target="blank"><img src="../pics/mmedia/meydi/preview/mmart2.jpg" alt="" class="round"></a>
 
 
 
