--- a/insidestart.html
+++ b/insidestart.html
@@ -8,10 +8,13 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body class="inside">
- Welcome to the artist collaboration page!
- That's page of three artists, named LirKov, MeyDi and VoS
- Info about our sources of imagination you can fond into 'About us'
- 'Gallery' contained our art.
- Into 'Status' our process of work, plans and 
+  <div margin="15px"><img src="startpic.png" class="leftimg" ></div><h1>Welcome to the artist collaboration page!</h1>
+ That's page of three artists, named <div class="textaccent">LirKov</div>, <div class="textaccent1">MeyDi</div> and <div class="textaccent2">VoS</div>
+ <br>Info about our sources of imagination you can found into 'About us' section. It's not most important, but can help you to build relationship with your artist.
+ <br>'Gallery' contained our art, hope you like it much! We're worked on them hardly!
+ <br>'Status' contains our process of work and plans. It's many projects which we're want to realise! 
+<br>'Order' section can give you important information about prices of artist and contains terms of service, which works in relationships between us and you.
+<br>'Web' - is a little section, which contains information about donate, ways of giving feedback and social media links.
+
 </body>
 </html>
