--- a/aboutus/lirkovbio.html
+++ b/aboutus/lirkovbio.html
@@ -9,7 +9,7 @@
 </head>
 <body class="inside">
 <img class="leftimg round" src="lirkovbi.png" width="200px" style="margin-right: 15px;">
- <h2>Bio</h2>
+ <h2>LirKov artist</h2>
  <br>Hello! I am an anthro artist <b class="textaccent">LirKov</b>, but you can call me Lira. My real name - Kazyurina Julia.
  <br>I was born <b class="textaccent">12 feb 1994</b>, in small and calm sity Armavir. 
  <br>My childhood was spent in travels, so, I think. that's why I adapt easy to any conditions.
